Fixed an issue where fragments were rendered with wrong position

--- a/IDE/main.css
+++ b/IDE/main.css
@@ -53,6 +53,7 @@
   min-width : 100%;
   min-height : 100%;
   display : block;
+  position : relative;
 }
 .ApplicationIDEDesignerWindow gui-fragment:before {
   position : absolute;
